# Thirstys-waterfall

./: .coverage  .cpanel.yml  .dockerignore  .env.example  .env.production  .env.production.example  .gitignore  CHANGELOG.md  CONSIGLIERE_MAXIMUM_ALLOWED_DESIGN.md  Dockerfile  Launch-Thirstys-Waterfall.ps1  MANIFEST.in  MAXIMUM_ALLOWED_DESIGN.md  MAXIMUM_ALLOWED_DESIGN_ACHIEVEMENT.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  README.md  REPOSITORY_AUDIT_REPORT.md  SECRET_REMEDIATION_SUMMARY.md  SECURITY.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SYSTEM_AUDIT_MAXIMUM_DETAIL.md  SYSTEM_INTEGRATION_MAXIMUM_DESIGN.md  TEST_SUITE_STATUS.md  THREAT_MODEL.md  docker-compose.production.yml  docker-compose.yml  install.bat  install.sh  pyproject.toml  requirements-build.in  requirements-deploy.in  requirements.txt  setup.py
.github/workflows/: ci.yml  codeql.yml  release.yml
bridge/base/: 0-thirstys-waterfall-namespace.yaml  kustomization.yaml  thirstys-waterfall-CUsersQuencher.geminiantigravityscratchsovereign-reposThirstys-waterfallconfig-persistentVolumeClaim.yaml  thirstys-waterfall-deployment.yaml  thirstys-waterfall-expose.yaml  thirstys-waterfall-service.yaml  thirstys-waterfall-thirstys_data-persistentVolumeClaim.yaml  thirstys_network-network-policy.yaml
config/: README.md  production.json
deploy/caddy/: Caddyfile
docs/: ARCHITECTURE.md  COMPETITION_COMPARISON.md  DEPLOYMENT.md  DOS_TRAP_MODE.md  GIT_HISTORY_REMEDIATION.md  NEW_FEATURES.md  RELEASE_GUIDE.md  SECURITY_FIX_HARDCODED_SECRETS.md  SHOWCASE.md  honeypot_swarm_defense.md  mfa_authentication.md  microvm_isolation.md  network_stealth.md  privacy_ledger.md
docs/operations/: CONTINUITY_MAP.md  ENCRYPTION_EVIDENCE_MAP.md  PLATFORM_CAPABILITIES.md  PRODUCTION_DEPLOYMENT_VERIFICATION.md  README_CLAIM_ACCEPTANCE.md  TARGET_DEPLOYMENT_EVIDENCE.md  WEB_AUTH_OPERATOR_SETUP.md
examples/: advanced_stealth_demo.py  advanced_usage.py  bandwidth_marketplace_demo.py  basic_usage.py  complete_usage.py  concrete_implementation_demo.py  config.json  dos_trap_demo.py  hardware_root_of_trust_security_demo.py  honeypot_swarm_demo.py  mfa_authentication_example.py  microvm_isolation_demo.py  privacy_ledger_examples.py  swarm_demo_simple.py
scripts/: collect_target_deployment_evidence.py  package_target_deployment_evidence.py  probe_host_network_policy_evidence.py  probe_platform_backend_evidence.py  probe_secret_rotation_evidence.py  probe_service_orchestrator_evidence.py  probe_target_auth_evidence.py  probe_target_image_evidence.py  probe_target_rollback_evidence.py  target_evidence_common.py  verify_production_deployment.py  verify_production_proxy_config.py  verify_release_version.py  verify_reproducible_build.py  verify_target_deployment_evidence.py
tests/: test_ad_annihilator.py  test_advanced_stealth.py  test_ai_setup_themes.py  test_basic.py  test_browser.py  test_browser_downloads.py  test_collect_target_deployment_evidence.py  test_consigliere.py  test_dos_trap.py  test_encrypted_logging.py  test_encrypted_network.py  test_encryption_evidence.py  test_entrypoints.py  test_firewall_backends.py  test_firewall_hardware_cloud_evidence.py  test_format_converter.py  test_global_kill_switch.py  test_god_tier_encryption.py  test_hardware_root_of_trust.py  test_local_inference.py  test_media_downloader.py  test_mesh_networking.py  test_mfa_auth.py  test_microvm_isolation.py  test_native_web_engine.py  test_orchestrator_status.py  test_package_target_deployment_evidence.py  test_packet_filtering.py  test_platform_capabilities.py  test_privacy_auditor.py  test_privacy_engines.py  test_privacy_ledger.py  test_privacy_risk_engine.py  test_probe_host_network_policy_evidence.py  test_probe_target_auth_evidence.py  test_probe_target_image_evidence.py  test_production_proxy_config.py  test_production_verifier_target_evidence.py  test_public_claim_hygiene.py  test_python_marker_hygiene.py  (+17 more)
thirstys_waterfall/: __init__.py  cli.py  encryption_evidence.py  kill_switch.py  orchestrator.py  platform_capabilities.py  sovereign_binding.py
thirstys_waterfall/ad_annihilator/: __init__.py  ad_database.py  autoplay_killer.py  holy_war_engine.py  tracker_destroyer.py
thirstys_waterfall/ai_assistant/: __init__.py  ai_engine.py  context_manager.py  local_inference.py
thirstys_waterfall/browser/: __init__.py  browser_engine.py  content_blocker.py  downloads.py  encrypted_navigation.py  encrypted_search.py  sandbox.py  tab_manager.py
thirstys_waterfall/config/: __init__.py  registry.py  validator.py
thirstys_waterfall/consigliere/: __init__.py  action_ledger.py  capability_manager.py  consigliere_engine.py  privacy_checker.py
thirstys_waterfall/firewalls/: __init__.py  backends.py  base.py  circuit_level.py  cloud.py  hardware.py  honeypot_swarm.py  manager.py  next_generation.py  packet_filtering.py  proxy.py  software.py  stateful_inspection.py
thirstys_waterfall/media_downloader/: __init__.py  format_converter.py  media_engine.py  media_library.py
thirstys_waterfall/network/: __init__.py  advanced_stealth.py
thirstys_waterfall/privacy/: __init__.py  anti_fingerprint.py  anti_malware.py  anti_phishing.py  anti_tracker.py  onion_router.py  privacy_auditor.py
thirstys_waterfall/remote_access/: __init__.py  remote_browser.py  remote_desktop.py  secure_tunnel.py
thirstys_waterfall/security/: __init__.py  dos_trap.py  hardware_root_of_trust.py  mfa_auth.py  microvm_isolation.py  privacy_ledger.py  privacy_risk_engine.py
thirstys_waterfall/settings/: __init__.py  contact_system.py  feedback_manager.py  qa_system.py  settings_manager.py
thirstys_waterfall/setup/: __init__.py  captcha_system.py  notice_letter.py  setup_wizard.py  usage_tutorial.py
thirstys_waterfall/storage/: __init__.py  ephemeral_storage.py  privacy_vault.py
thirstys_waterfall/themes/: __init__.py  theme_detector.py  theme_manager.py
thirstys_waterfall/utils/: __init__.py  doh_resolver.py  encrypted_logging.py  encrypted_network.py  god_tier_encryption.py
web/: app.py  gunicorn.conf.py  index.html  requirements.txt  start.sh
web/static/: index.html
(+25 files in other folders)
