[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thirstys-waterfall"
version = "1.0.3"
description = "Integrated privacy-first system with 8 firewalls, built-in VPN, and incognito browser"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Thirsty Security Team", email = "security@thirstys.local"}
]
maintainers = [
    {name = "Thirsty Security Team", email = "security@thirstys.local"}
]
keywords = [
    "privacy",
    "security",
    "vpn",
    "firewall",
    "browser",
    "encryption",
    "anonymity"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: System :: Networking :: Firewalls",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
requires-python = ">=3.10"
dependencies = [
    "cryptography>=46.0.7,<50.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.3.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.11.0,<2.0.0",
    "pylint>=2.17.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.3.0",
]
web = [
    "Flask>=3.1.3,<4.0.0",
    "Flask-CORS>=6.0.5,<7.0.0",
    "Flask-SocketIO>=5.3.5,<6.0.0",
    "Flask-JWT-Extended>=4.6.0,<5.0.0",
    "Flask-Limiter>=4.1.1,<5.0.0",
    "python-socketio>=5.16.3,<6.0.0",
    "python-engineio>=4.8.0,<5.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "gunicorn>=26.0.0,<27.0.0",
    "gevent>=26.5.0,<27.0.0",
    "gevent-websocket>=0.10.1,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/IAmSoThirsty/Thirstys-waterfall"
Documentation = "https://github.com/IAmSoThirsty/Thirstys-waterfall/blob/main/README.md"
Repository = "https://github.com/IAmSoThirsty/Thirstys-waterfall"
Issues = "https://github.com/IAmSoThirsty/Thirstys-waterfall/issues"
Changelog = "https://github.com/IAmSoThirsty/Thirstys-waterfall/blob/main/CHANGELOG.md"

[project.scripts]
thirstys-waterfall = "thirstys_waterfall.cli:main"

[tool.setuptools.packages.find]
include = ["thirstys_waterfall*"]

[tool.setuptools.package-data]
thirstys_waterfall = ["**/*.json", "**/*.txt", "**/*.yml", "**/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=thirstys_waterfall --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["thirstys_waterfall"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 127
target-version = ['py310', 'py311']

[tool.mypy]
python_version = "3.10"
files = ["scripts"]
check_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
warn_unused_configs = true

[tool.pylint.messages_control]
max-line-length = 127
