[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thirstys-waterfall"
version = "1.0.3"
description = "Integrated privacy-first system with 8 firewalls, built-in VPN, and incognito browser"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Thirsty Security Team", email = "security@thirstys.local"}
]
maintainers = [
    {name = "Thirsty Security Team", email = "security@thirstys.local"}
]
keywords = [
    "privacy",
    "security",
    "vpn",
    "firewall",
    "browser",
    "encryption",
    "anonymity"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: System :: Networking :: Firewalls",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
requires-python = ">=3.10"
dependencies = [
    "cryptography>=46.0.7,<50.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.3.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.11.0,<2.0.0",
    "pylint>=2.17.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.3.0",
]
web = [
    "Flask>=3.1.3,<4.0.0",
    "Flask-CORS>=6.0.5,<7.0.0",
    "Flask-SocketIO>=5.3.5,<6.0.0",
    "Flask-JWT-Extended>=4.6.0,<5.0.0",
    "Flask-Limiter>=4.1.1,<5.0.0",
    "python-socketio>=5.16.3,<6.0.0",
    "python-engineio>=4.8.0,<5.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "gunicorn>=26.0.0,<27.0.0",
    "gevent>=26.5.0,<27.0.0",
    "gevent-websocket>=0.10.1,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/IAmSoThirsty/Thirstys-waterfall"
Documentation = "https://github.com/IAmSoThirsty/Thirstys-waterfall/blob/main/README.md"
Repository = "https://github.com/IAmSoThirsty/Thirstys-waterfall"
Issues = "https://github.com/IAmSoThirsty/Thirstys-waterfall/issues"
Changelog = "https://github.com/IAmSoThirsty/Thirstys-waterfall/blob/main/CHANGELOG.md"

[project.scripts]
thirstys-waterfall = "thirstys_waterfall.cli:main"

[tool.setuptools.packages.find]
include = ["thirstys_waterfall*"]

[tool.setuptools.package-data]
thirstys_waterfall = ["**/*.json", "**/*.txt", "**/*.yml", "**/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=thirstys_waterfall --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["thirstys_waterfall"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 127
target-version = ['py310', 'py311']

[tool.mypy]
python_version = "3.10"
files = [
    "scripts",
    "thirstys_waterfall/__init__.py",
    "thirstys_waterfall/cli.py",
    "thirstys_waterfall/ad_annihilator/__init__.py",
    "thirstys_waterfall/ad_annihilator/ad_database.py",
    "thirstys_waterfall/ad_annihilator/autoplay_killer.py",
    "thirstys_waterfall/ad_annihilator/holy_war_engine.py",
    "thirstys_waterfall/ad_annihilator/tracker_destroyer.py",
    "thirstys_waterfall/ai_assistant/__init__.py",
    "thirstys_waterfall/ai_assistant/ai_engine.py",
    "thirstys_waterfall/ai_assistant/context_manager.py",
    "thirstys_waterfall/ai_assistant/local_inference.py",
    "thirstys_waterfall/platform_capabilities.py",
    "thirstys_waterfall/sovereign_binding.py",
    "thirstys_waterfall/browser/__init__.py",
    "thirstys_waterfall/browser/browser_engine.py",
    "thirstys_waterfall/browser/content_blocker.py",
    "thirstys_waterfall/browser/downloads.py",
    "thirstys_waterfall/browser/encrypted_navigation.py",
    "thirstys_waterfall/browser/encrypted_search.py",
    "thirstys_waterfall/browser/engine/__init__.py",
    "thirstys_waterfall/browser/engine/document.py",
    "thirstys_waterfall/browser/engine/engine.py",
    "thirstys_waterfall/browser/engine/fetcher.py",
    "thirstys_waterfall/browser/engine/html_parser.py",
    "thirstys_waterfall/browser/engine/layout.py",
    "thirstys_waterfall/browser/sandbox.py",
    "thirstys_waterfall/browser/tab_manager.py",
    "thirstys_waterfall/config/__init__.py",
    "thirstys_waterfall/config/registry.py",
    "thirstys_waterfall/config/validator.py",
    "thirstys_waterfall/consigliere/__init__.py",
    "thirstys_waterfall/consigliere/action_ledger.py",
    "thirstys_waterfall/consigliere/capability_manager.py",
    "thirstys_waterfall/consigliere/consigliere_engine.py",
    "thirstys_waterfall/consigliere/privacy_checker.py",
    "thirstys_waterfall/encryption_evidence.py",
    "thirstys_waterfall/firewalls/__init__.py",
    "thirstys_waterfall/firewalls/backends.py",
    "thirstys_waterfall/firewalls/base.py",
    "thirstys_waterfall/firewalls/circuit_level.py",
    "thirstys_waterfall/firewalls/cloud.py",
    "thirstys_waterfall/firewalls/hardware.py",
    "thirstys_waterfall/firewalls/honeypot_swarm.py",
    "thirstys_waterfall/firewalls/manager.py",
    "thirstys_waterfall/firewalls/next_generation.py",
    "thirstys_waterfall/firewalls/packet_filtering.py",
    "thirstys_waterfall/firewalls/proxy.py",
    "thirstys_waterfall/firewalls/software.py",
    "thirstys_waterfall/firewalls/stateful_inspection.py",
    "thirstys_waterfall/media_downloader/__init__.py",
    "thirstys_waterfall/media_downloader/format_converter.py",
    "thirstys_waterfall/media_downloader/media_engine.py",
    "thirstys_waterfall/media_downloader/media_library.py",
    "thirstys_waterfall/network/__init__.py",
    "thirstys_waterfall/network/advanced_stealth.py",
    "thirstys_waterfall/privacy/__init__.py",
    "thirstys_waterfall/privacy/anti_fingerprint.py",
    "thirstys_waterfall/privacy/anti_malware.py",
    "thirstys_waterfall/privacy/anti_phishing.py",
    "thirstys_waterfall/privacy/anti_tracker.py",
    "thirstys_waterfall/privacy/onion_router.py",
    "thirstys_waterfall/privacy/privacy_auditor.py",
    "thirstys_waterfall/kill_switch.py",
    "thirstys_waterfall/orchestrator.py",
    "thirstys_waterfall/remote_access/__init__.py",
    "thirstys_waterfall/remote_access/remote_browser.py",
    "thirstys_waterfall/remote_access/remote_desktop.py",
    "thirstys_waterfall/remote_access/secure_tunnel.py",
    "thirstys_waterfall/storage/__init__.py",
    "thirstys_waterfall/storage/ephemeral_storage.py",
    "thirstys_waterfall/storage/privacy_vault.py",
    "thirstys_waterfall/security/__init__.py",
    "thirstys_waterfall/security/dos_trap.py",
    "thirstys_waterfall/security/hardware_root_of_trust.py",
    "thirstys_waterfall/security/mfa_auth.py",
    "thirstys_waterfall/security/microvm_isolation.py",
    "thirstys_waterfall/security/privacy_ledger.py",
    "thirstys_waterfall/security/privacy_risk_engine.py",
    "thirstys_waterfall/settings/__init__.py",
    "thirstys_waterfall/settings/contact_system.py",
    "thirstys_waterfall/settings/feedback_manager.py",
    "thirstys_waterfall/settings/qa_system.py",
    "thirstys_waterfall/settings/settings_manager.py",
    "thirstys_waterfall/setup/__init__.py",
    "thirstys_waterfall/setup/captcha_system.py",
    "thirstys_waterfall/setup/notice_letter.py",
    "thirstys_waterfall/setup/setup_wizard.py",
    "thirstys_waterfall/setup/usage_tutorial.py",
    "thirstys_waterfall/themes/__init__.py",
    "thirstys_waterfall/themes/theme_detector.py",
    "thirstys_waterfall/themes/theme_manager.py",
    "thirstys_waterfall/utils/__init__.py",
    "thirstys_waterfall/utils/doh_resolver.py",
    "thirstys_waterfall/utils/encrypted_logging.py",
    "thirstys_waterfall/utils/encrypted_network.py",
    "thirstys_waterfall/utils/god_tier_encryption.py",
    "thirstys_waterfall/wifi_network/__init__.py",
    "thirstys_waterfall/wifi_network/mesh_networking.py",
    "thirstys_waterfall/wifi_network/spectrum_analyzer.py",
    "thirstys_waterfall/wifi_network/wifi_controller.py",
    "thirstys_waterfall/wifi_network/wifi_security.py",
    "thirstys_waterfall/vpn/__init__.py",
    "thirstys_waterfall/vpn/backends.py",
    "thirstys_waterfall/vpn/dns_protection.py",
    "thirstys_waterfall/vpn/kill_switch.py",
    "thirstys_waterfall/vpn/multi_hop.py",
    "thirstys_waterfall/vpn/vpn_manager.py",
]
check_untyped_defs = true
follow_imports = "skip"
ignore_missing_imports = true
warn_unused_configs = true

[tool.pylint.messages_control]
max-line-length = 127
